--- a/app/src/main/res/layout/layout_signup_id_password.xml
+++ b/app/src/main/res/layout/layout_signup_id_password.xml
@@ -112,6 +112,7 @@
             android:layout_height="48dp"
             android:background="@drawable/bg_square_white_grey_14"
             android:paddingStart="20dp"
+            android:inputType="textPassword"
             android:hint="@string/signup_edit_text"
             android:textColor="@color/black"
             android:textColorHint="@color/gray_400"
@@ -137,6 +138,7 @@
             android:layout_height="48dp"
             android:background="@drawable/bg_square_white_grey_14"
             android:paddingStart="20dp"
+            android:inputType="textPassword"
             android:hint="@string/signup_edit_text"
             android:textColor="@color/black"
             android:textColorHint="@color/gray_400"
