--- a/app/src/main/res/layout/layout_identify.xml
+++ b/app/src/main/res/layout/layout_identify.xml
@@ -32,35 +32,6 @@
             android:layout_gravity="center"/>
     </FrameLayout>
 
-    <LinearLayout
-        android:id="@+id/layout_takepicure_identify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/view_divide_identify"
-        app:layout_constraintTop_toTopOf="@id/view_divide_identify"
-        app:layout_constraintBottom_toBottomOf="@id/view_divide_identify"
-        >
-
-        <ImageView
-            android:id="@+id/ic_signup_camera"
-            android:layout_width="24sp"
-            android:layout_height="24sp"
-            android:src="@drawable/ic_camera"
-            />
-        <TextView
-            android:id="@+id/txt_signup_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/signup_camera"
-            android:layout_marginStart="5dp"
-            android:fontFamily="@font/pretendard_regular"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            />
-
-    </LinearLayout>
 
 
     <LinearLayout
@@ -68,24 +39,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/view_divide_identify"
-        app:layout_constraintTop_toTopOf="@id/view_divide_identify"
-        app:layout_constraintBottom_toBottomOf="@id/view_divide_identify"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_identify"
         >
 
         <ImageView
             android:id="@+id/ic_signup_gallery"
             android:layout_width="24sp"
             android:layout_height="24sp"
-            android:src="@drawable/ic_gallery"
+            android:src="@drawable/ic_camera"
             />
 
         <TextView
             android:id="@+id/txt_signup_gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/signup_gallery"
+            android:text="사진 촬영하기"
             android:layout_marginStart="5dp"
             android:fontFamily="@font/pretendard_regular"
             android:textColor="@color/black"
@@ -95,15 +66,7 @@
     </LinearLayout>
 
     
-    <View
-        android:id="@+id/view_divide_identify"
-        android:layout_width="2dp"
-        android:layout_height="34.5sp"
-        android:background="#C9C9C9"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_identify"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
