--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,9 @@
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/white"
+        app:labelVisibilityMode="unlabeled"
+        app:itemActiveIndicatorStyle="@style/BottomNav_NoIndicator"
+        app:itemIconSize="50dp"
         app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
