--- a/app/src/main/res/layout/item_schedule_with_place.xml
+++ b/app/src/main/res/layout/item_schedule_with_place.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/item_schdule_date"
+        android:id="@+id/item_schedule_day_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Day 1 / 1.1 (일)"
-        android:fontFamily="@font/pretendard_regular"
-        android:textSize="20sp"
+        android:text="Day 1"
+        android:fontFamily="@font/pretendard_semibold"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+        android:id="@+id/item_schedule_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1.1/토"
+        android:fontFamily="@font/pretendard_semibold"
+        android:textColor="@color/gray_300"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/item_schedule_day_count"
+        app:layout_constraintTop_toTopOf="@id/item_schedule_day_count"
+        app:layout_constraintBottom_toBottomOf="@id/item_schedule_day_count"/>
+
     <FrameLayout
         android:id="@+id/btn_schedule_add_place"
         android:layout_width="0dp"
         android:layout_height="44sp"
         android:layout_marginTop="14sp"
-        app:layout_constraintTop_toBottomOf="@id/item_schdule_date"
-        app:layout_constraintStart_toStartOf="@id/item_schdule_date"
+        app:layout_constraintTop_toBottomOf="@id/item_schedule_day_count"
+        app:layout_constraintStart_toStartOf="@id/item_schedule_day_count"
         app:layout_constraintEnd_toStartOf="@id/line_item_schedule">
         <ImageView
             android:layout_width="match_parent"
