--- a/app/src/main/res/layout/layout_make_courses.xml
+++ b/app/src/main/res/layout/layout_make_courses.xml
@@ -407,7 +407,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_courses_schedule"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:listitem="@layout/item_schedule_with_place"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
