--- a/app/src/main/res/layout/item_home_story.xml
+++ b/app/src/main/res/layout/item_home_story.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="nickname"
-        android:textColor="@color/background_color"
+        android:textColor="@color/white"
         android:textSize="12sp"
         android:fontFamily="@font/pretendard_regular"
         android:includeFontPadding="false"
